--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "cafetria-react": "file:",
+    "embla-carousel-react": "^8.2.1",
     "next": "14.2.8",
     "react": "^18",
     "react-dom": "^18"
